actually added favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/TweenMax.min.js"></script>
 	<script type="text/javascript" src="js/jquery.scrollmagic.min.js"></script>
 	<script type="text/javascript" src="js/jquery.scrollmagic.debug.js"></script>
+	<link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
 	<script>
 
 
