--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ $( document ).ready(function() {
 
 	var text = ["GOOGLE DOCS", "POWERPOINT", "PDF PRE-PRO BOOKS", "WORD DOCS", "DROPBOX", "GOOGLE DRIVE", ".XLS", "EMAIL ATTACHMENTS", "WIREDRIVE"];
 
-	var bye = ["SAYONARA", "TA TA", "ARRIVEDERCI", "CIAO", "HASTA LA VISTA", "ADIOS", "AU REVOIR", "SEEYA", "LATER", "TOODLES", "PEACE", "HAPPY TRAILS", "BRB", "TTYL", "SEE YOU AROUND", "THANKS FOR THE MEMORIES", "I GUESS THIS IS IT", "SO LONG", "FAREWELL", "WE HAD A GOOD RUN", "BON VOYAGE"];
+	var bye = ["SAYONARA", "TA TA", "CIAOZERS", "ADIOS", "AU REVOIR", "TOODLES", "HAPPY TRAILS", "TTYL", "SEE YOU AROUND", "THANKS FOR THE MEMORIES", "DOMO ARIGATO", "SO LONG", "FAREWELL", "IT'S BEEN REAL", "BON VOYAGE"];
 
     var counter = 0;
 
